# osrs-hiscores

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt
osrs_hiscores/: client.py  enums.py  models.py
osrs_hiscores/utils/: client.py
src/: client.py  enums.py
src/osrs_hiscores_client.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_all.py
