[project]
name = "osrs-hiscores"
version = "0.1.0"
description = "Python client for Old School RuneScape Hiscores API."
readme = "README.md"
authors = [
    { name = "Valtteri Remes" }
]
license = "MIT"
requires-python = ">=3.10"
keywords = ["osrs", "hiscores", "runescape", "api", "client"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "requests>=2.31.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
