[project]
name = "osrs-hiscores-client"
version = "1.0.1"
description = "Python client for Old School RuneScape Hiscores API."
readme = "README.md"
authors = [
    { name = "Valtteri Remes" }
]
license = "MIT"
requires-python = ">=3.10"
keywords = ["osrs", "hiscores", "runescape", "api", "client"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "requests>=2.31.0"
]

[project.urls]
Homepage = "https://github.com/vremes/osrs-hiscores"
Documentation = "https://github.com/vremes/osrs-hiscores"
Repository = "https://github.com/vremes/osrs-hiscores.git"
Issues = "https://github.com/vremes/osrs-hiscores/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
